--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,120 +1,235 @@
 <!DOCTYPE html>
 <html>
 
-<!--900-include=/includes/head.html-->
-    <body>
-        <!--900-include=/includes/internal_nav.html-->
-<div class="sponsor-wrapper">
-		<div class="col-sm-4 sponsor-sidebar">
-		<div class="row">
-			<div class="col-sm-12">
-				<h3><strong>We are looking for sponsors for Design Like Mad 2014</strong></h3>
-				<p>Last year we had some wonderful sponsors that helped us put on Design Like Mad.  This year we are looking not only for help with the event (money, raffle prizes, t-shirts, and food), but we are also looking for donations to go to a fund to help needy non-profits with implementing their final Design Like Mad designs.</p>
-				<p><strong>Please fill out the form below for more information:</strong></p>
-			</div>
-		</div>
+<head>
+    <title>Design Like Mad</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,500,700|Roboto+Slab:700,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/font-awesome-4.1.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/lightbox.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="icon" type="image/ico" href="/images/favicon.ico" />
+</head>
 
-		<div class="row">
-			<div class="col-sm-12 sponsor-form">
-                <form action="/form/sponsors" data-redirect="/sponsors/success.html" data-email="abby@designlikemad.org">
-                    <input type="text" name="name" value="NAME" onclick="this.select();">
-                    <input type="email" name="email" value="EMAIL" onclick="this.select();">
-                    <input type="text" name="phoneNumber" value="PHONE NUMBER" onclick="this.select();">
-                    <input type="text" name="company" value="COMPANY" onclick="this.select();">
-                    <textarea type="email" name="comments" rows="4" cols="50" onclick="this.select();">COMMENTS</textarea>
-                    <button type="submit" class="btn btn-submit">SEND</button>
-                </form>
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-8">
-			<div class="row">
-				<div class="col-sm-12 secondary-sponsers">
-					<h2>National Sponsor</h2>
-					<a href="http://www.900dpi.com" target="_blank"><img src="/images/900dpi.png" /></a>
-				</div>
-			</div>
-			<div class="row second-sponsor">
-				<div class="col-sm-12">
-					<h2>Gold Sponsors</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6">
-					<a href="https://www.nglic.com/" target="_blank" class="gold-sponsors"><img src="/images/ngl.png" /></a>
-				</div>
-                <div class="col-sm-6">
-                    <a href="http://www.blendimc.com/" target="_blank" class="gold-sponsors"><img src="/images/blend.png" /></a>
-                </div>
-			</div>
-            <div class="row gold-second-row">
-                <div class="col-sm-6">
-                    <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/screen_door.png" /></a>
-                </div>
-                <div class="col-sm-6">
-                    <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/willyst.jpg" /></a>
-                </div>
-              
+<body>
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/index.html"><img src="/images/small_logo.png" />Design Like Mad</a>
             </div>
-            <div class="row gold-second-row">
-                <div class="col-sm-6">
-                    <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/ians_large.png" id="ians" /></a>
-                </div>
-
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/index.html#about">About</a>
+                    </li>
+                    <li><a href="/index.html#how">How it Works</a>
+                    </li>
+                    <li>
+                        <a href="/projects">2013 Projects</a>
+                    </li>
+                    <li><a href="/schedule">Schedule</a>
+                    </li>
+                    <!-- <li><a href="/blog">Updates</a>
+                    </li> -->
+                    <li><a href="/sponsors">Sponsors</a>
+                    </li>
+                    <li><a href="/index.html#join" id="join-button">JOIN</a>
+                    </li>
+                </ul>
             </div>
-			<div class="row second-sponsor">
-				<div class="col-sm-12">
-					<h2>Silver Sponsors</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-4 secondary-sponsors">
-					<a href="http://www.gospruce.com/" target="_blank"><img src="/images/spruce.png" /></a>
-				</div>
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://www.drawski.com/" target="_blank"><img src="/images/drawski.png" /></a>
-                </div>
-                <div class="col-sm-4 secondary-sponsers">
-                    <a href="http://www.madisonpubliclibrary.org/" target="_blank"><img src="/images/mpl.png" /></a>
-                </div>
-			</div>
-			<div class="row second-row">
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://icandy-graphics.com/" target="_blank"><img src="/images/icandy.png" /></a>
-                </div>
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://madisontrafficgarden.org/" target="_blank"><img src="/images/mtg_logo.png" /></a>
-                </div>
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://ianspizza.com/" target="_blank"><img src="/images/suprtanet.png" /></a>
-                </div>
-			</div>
-            <div class="row second-row">
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://www.thebrinklounge.com/" target="_blank"><img src="/images/brink.png" /></a>
-                </div>
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://www.musicnotes.com" target="_blank"><img src="/images/musicnotes.png" /></a>
-                </div>
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://www.musicnotes.com" target="_blank"><img src="/images/ionic.png" /></a>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+    <div class="sponsor-wrapper">
+<!--         <div class="col-sm-4 sponsor-sidebar">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h3><strong>We are looking for sponsors for Design Like Mad 2014</strong></h3>
+                    <p>Last year we had some wonderful sponsors that helped us put on Design Like Mad. This year we are looking not only for help with the event (money, raffle prizes, t-shirts, and food), but we are also looking for donations to go to a fund to help needy non-profits with implementing their final Design Like Mad designs.</p>
+                    <p><strong>Please fill out the form below for more information:</strong></p>
                 </div>
             </div>
-            <div class="row second-row">
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://www.milios.com/" target="_blank"><img src="/images/milios.jpg" /></a>
-                </div>
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://www.madworkscoworking.org/" target="_blank"><img src="/images/madworks.png" /></a>
-                </div>
-                <div class="col-sm-4 secondary-sponsors">
-                    <a href="http://squashworkshop.com/" target="_blank"><img src="/images/squash.jpg" /></a>
+            <div class="row">
+                <div class="col-sm-12 sponsor-form">
+                    <form action="/form/sponsors" data-redirect="/sponsors/success.html" data-email="abby@designlikemad.org">
+                        <input type="text" name="name" value="NAME" onclick="this.select();">
+                        <input type="email" name="email" value="EMAIL" onclick="this.select();">
+                        <input type="text" name="phoneNumber" value="PHONE NUMBER" onclick="this.select();">
+                        <input type="text" name="company" value="COMPANY" onclick="this.select();">
+                        <textarea type="email" name="comments" rows="4" cols="50" onclick="this.select();">COMMENTS</textarea>
+                        <button type="submit" class="btn btn-submit">SEND</button>
+                    </form>
                 </div>
             </div>
-		</div>
-	</div>
-</div>
-<!--900-include=/includes/footer.html-->
+        </div> -->
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <div class="row">
+                    <div class="col-sm-12 secondary-sponsers">
+                        <h2>National Sponsor</h2>
+                        <a href="http://www.900dpi.com" target="_blank"><img src="/images/900dpi.png" /></a>
+                    </div>
+                </div>
+                <div class="row second-sponsor">
+                    <div class="col-sm-12">
+                        <h2>Gold Sponsors</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <a href="https://www.nglic.com/" target="_blank" class="gold-sponsors"><img src="/images/ngl.png" /></a>
+                    </div>
+                    <div class="col-sm-6">
+                        <a href="http://www.blendimc.com/" target="_blank" class="gold-sponsors"><img src="/images/blend.png" /></a>
+                    </div>
+                </div>
+                <div class="row gold-second-row">
+                    <div class="col-sm-6">
+                        <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/screen_door.png" /></a>
+                    </div>
+                    <div class="col-sm-6">
+                        <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/willyst.jpg" /></a>
+                    </div>
+                </div>
+                <div class="row gold-second-row">
+                    <div class="col-sm-6">
+                        <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/ians_large.png" id="ians" /></a>
+                    </div>
+                </div>
+                <div class="row second-sponsor">
+                    <div class="col-sm-12">
+                        <h2>Silver Sponsors</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://www.gospruce.com/" target="_blank"><img src="/images/spruce.png" /></a>
+                    </div>
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://www.drawski.com/" target="_blank"><img src="/images/drawski.png" /></a>
+                    </div>
+                    <div class="col-sm-4 secondary-sponsers">
+                        <a href="http://www.madisonpubliclibrary.org/" target="_blank"><img src="/images/mpl.png" /></a>
+                    </div>
+                </div>
+                <div class="row second-row">
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://icandy-graphics.com/" target="_blank"><img src="/images/icandy.png" /></a>
+                    </div>
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://madisontrafficgarden.org/" target="_blank"><img src="/images/mtg_logo.png" /></a>
+                    </div>
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://ianspizza.com/" target="_blank"><img src="/images/suprtanet.png" /></a>
+                    </div>
+                </div>
+                <div class="row second-row">
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://www.thebrinklounge.com/" target="_blank"><img src="/images/brink.png" /></a>
+                    </div>
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://www.musicnotes.com" target="_blank"><img src="/images/musicnotes.png" /></a>
+                    </div>
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://www.musicnotes.com" target="_blank"><img src="/images/ionic.png" /></a>
+                    </div>
+                </div>
+                <div class="row second-row">
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://www.milios.com/" target="_blank"><img src="/images/milios.jpg" /></a>
+                    </div>
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://www.madworkscoworking.org/" target="_blank"><img src="/images/madworks.png" /></a>
+                    </div>
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://squashworkshop.com/" target="_blank"><img src="/images/squash.jpg" /></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="row email-wrapper">
+        <div class="col-sm-4 col-sm-offset-4">
+            <h3>Sign up to receive updates about Design Like Mad!</h3>
+            <form action="/form/emails" data-redirect="/sponsors/success.html" data-email="abby@designlikemad.org">
+                <input type="email" name="email" value="EMAIL" onclick="this.select();">
+                <br />
+                <button type="submit" class="join-button footer-join">SIGN UP</button>
+            </form>
+        </div>
+    </div> -->
+    <!-- <div class="footer">
+        <div class="row">
+            <div class="col-sm-2">
+                <a href="http://www.designlikemad.org">DESIGN LIKE MAD, USA</a>
+            </div>
+            <div class="col-sm-2">
+                <a href="http://www.designlikemad.org/contact">CONTACT</a>
+            </div>
+            <div class="col-sm-2">
+                <a href="http://www.designlikemad.org/projects">2013 PROJECTS</a>
+            </div>
+            <div class="col-sm-2">
+                <a href="http://www.designlikemad.org#host">HOST AN EVENT</a>
+            </div>
+            <div class="col-sm-2">
+                <a href="http://www.designlikemad.org/press">PRESS</a>
+            </div>
+            <div class="col-sm-2">
+                <a href="http://www.designlikemad.org">CITIES</a>
+            </div>
+        </div>
+    </div> -->
+    <div class="bottom-footer">
+        <div class="row">
+            &copy; Design Like Mad, 2013
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/lightbox.js"></script>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-52627734-1', 'auto');
+    ga('send', 'pageview');
+    $('.popup-gallery').magnificPopup({
+        delegate: 'a',
+        type: 'image',
+        tLoading: 'Loading image #%curr%...',
+        mainClass: 'mfp-img-mobile',
+        gallery: {
+            enabled: true,
+            navigateByImgClick: true,
+            preload: [0, 1] // Will preload 0 - before current, and 1 after the current image
+        },
+        image: {
+            tError: '<a href="%url%">The image #%curr%</a> could not be loaded.',
+            titleSrc: function(item) {
+                return item.el.attr('title');
+            }
+        }
+    });
+    </script>
 </body>
+
 </html>
