fixed header image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- /.container -->
     </nav>
     <div class="row hero-image">
-        <img src="/images/dlm_portland_ad2.png" />
+        <!-- <img src="/images/header-image.png" /> -->
     </div>
     <div class="map-wrapper" id="about">
         <div class="row">
